# voice_fin_bot

./: .env.example  .gitignore  README.md  config.py  logger.py  main.py  pyproject.toml
.github/workflows/: check.yaml
core/: category_rules.py  models.py  processor.py  prompts.py
data/: analytics.db
handlers/: commands.py  finance.py
middlewares/: services_mw.py
services/: ai_service.py  analytics_db.py  gsheets.py  redis_db.py
